--- a/requirements.txt
+++ b/requirements.txt
@@ -5,19 +5,29 @@ chardet==3.0.4
 construct==2.5.3
 cssselect==1.0.3
 Django==2.2.3
+django-markdownx==2.0.28
+django-social-share==1.3.2
 django-taggit==1.1.0
 future==0.17.1
 haystack==0.42
 idna==2.8
 isort==4.3.21
+jedi==0.14.1
 lazy-object-proxy==1.4.1
 lxml==4.3.3
+Markdown==3.1.1
 markdown2==2.3.8
 mccabe==0.6.1
+mistune==0.8.4
+parso==0.5.1
 pefile==2019.4.18
 pep8==1.7.1
+Pillow==6.1.0
+psycopg2==2.8.3
+Pygments==2.4.2
 pylint==2.3.1
 pyquery==1.4.0
+python-memcached==1.59
 python-ptrace==0.9.3
 pytz==2019.1
 readtime==1.1.1
@@ -28,4 +38,6 @@ soupsieve==1.9.2
 sqlparse==0.3.0
 typed-ast==1.4.0
 urllib3==1.25.3
+uWSGI==2.0.18
+uwsgitop==0.11
 wrapt==1.11.2
