--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ certifi==2019.6.16
 chardet==3.0.4
 construct==2.5.3
 cssselect==1.0.3
+dj-database-url==0.5.0
 Django==2.2.3
+django-connection-url==0.1.2
+django-heroku==0.3.1
 django-markdownx==2.0.28
 django-social-share==1.3.2
 django-taggit==1.1.0
@@ -40,4 +43,5 @@ typed-ast==1.4.0
 urllib3==1.25.3
 uWSGI==2.0.18
 uwsgitop==0.11
+whitenoise==4.1.4
 wrapt==1.11.2
