--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-markdownx==2.0.28
 django-social-share==1.3.2
 django-taggit==1.1.0
 future==0.17.1
+gunicorn==19.9.0
 haystack==0.42
 idna==2.8
 isort==4.3.21
