--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ cssselect==1.0.3
 dj-database-url==0.5.0
 Django==2.2.3
 django-connection-url==0.1.2
+django-filter==2.2.0
 django-heroku==0.3.1
 django-markdownx==2.0.28
 django-social-share==1.3.2
 django-taggit==1.1.0
+djangorestframework==3.10.3
 future==0.17.1
 gunicorn==19.9.0
 haystack==0.42
