--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+aiohttp==3.6.2
 astroid==2.2.5
+async-timeout==3.0.1
+attrs==19.2.0
 beautifulsoup4==4.7.1
 certifi==2019.6.16
 chardet==3.0.4
@@ -6,6 +9,7 @@ construct==2.5.3
 cssselect==1.0.3
 dj-database-url==0.5.0
 Django==2.2.3
+django-braces==1.13.0
 django-connection-url==0.1.2
 django-filter==2.2.0
 django-heroku==0.3.1
@@ -25,6 +29,7 @@ Markdown==3.1.1
 markdown2==2.3.8
 mccabe==0.6.1
 mistune==0.8.4
+multidict==4.5.2
 parso==0.5.1
 pefile==2019.4.18
 pep8==1.7.1
@@ -40,6 +45,7 @@ readtime==1.1.1
 redis==3.2.1
 requests==2.22.0
 six==1.12.0
+slackclient==2.2.1
 soupsieve==1.9.2
 sqlparse==0.3.0
 typed-ast==1.4.0
@@ -48,3 +54,4 @@ uWSGI==2.0.18
 uwsgitop==0.11
 whitenoise==4.1.4
 wrapt==1.11.2
+yarl==1.3.0
