--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ aiohttp==3.6.2
 astroid==2.2.5
 async-timeout==3.0.1
 attrs==19.2.0
+autopep8==1.4.4
 beautifulsoup4==4.7.1
+boto3==1.10.28
+botocore==1.13.28
 certifi==2019.6.16
 chardet==3.0.4
 construct==2.5.3
@@ -17,12 +20,14 @@ django-markdownx==2.0.28
 django-social-share==1.3.2
 django-taggit==1.1.0
 djangorestframework==3.10.3
+docutils==0.15.2
 future==0.17.1
 gunicorn==19.9.0
 haystack==0.42
 idna==2.8
 isort==4.3.21
 jedi==0.14.1
+jmespath==0.9.4
 lazy-object-proxy==1.4.1
 lxml==4.4.1
 Markdown==3.1.1
@@ -35,15 +40,18 @@ pefile==2019.4.18
 pep8==1.7.1
 Pillow==6.1.0
 psycopg2==2.8.3
+pycodestyle==2.5.0
 Pygments==2.4.2
 pylint==2.3.1
 pyquery==1.4.0
+python-dateutil==2.8.0
 python-memcached==1.59
 python-ptrace==0.9.3
 pytz==2019.1
 readtime==1.1.1
 redis==3.2.1
 requests==2.22.0
+s3transfer==0.2.1
 six==1.12.0
 slackclient==2.2.1
 soupsieve==1.9.2
